Add Step 3 of the Game

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
           </button>
         </div>
       </div>
+      <div class="winner">
+        <p>Tie</p>
+        <button class="again">play again</button>
+      </div>
       <div class="house-pick">
         <p>the house picked</p>
         <div class="pick-wrapper">
